@@ -27,6 +27,7 @@
   * Refuses to delete user node unless visitor is a manager.
   * Marks user as deleted and remove profile if node is destroyed.
   * Enable 'parent_id', 'project_id', 'section_id' Rubyless methods. <== TODO: Document
+  * Fixed a critical bug related to changing a virtual class' superclass.
 
 == 1.2.6, 1.2.7 2013-08-16
 
